# vigils-maintenance

./: .gitignore  Cargo.toml  README.md  SECURITY.md  tauri.conf.json
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
docs/: BUILD_AND_RELEASE.md  RELEASE_0.1.0.md  RELEASE_0.2.0.md  UPDATE_MANIFEST.md  USER_GUIDE.md
frontend/: app.js  index.html  styles.css
src/: lib.rs  main.rs  model.rs  operations.rs  platform.rs  release.rs
